@@ -346,6 +346,8 @@ namespace System.Windows.Browser {
 					} else {
 						Value val = (Value)Marshal.PtrToStructure (uargs[i], typeof (Value));
 						args[i] = ScriptObjectHelper.ObjectFromValue<object> (val);
+						if (args[i] is ScriptObject && ((ScriptObject)args[i]).ManagedObject != null)
+							args[i] = ((ScriptObject)args[i]).ManagedObject;
 					}
 				}
 
@@ -401,6 +403,8 @@ namespace System.Windows.Browser {
 					} else {
 						Value val = (Value)Marshal.PtrToStructure (uargs[i], typeof (Value));
 						args[i] = ScriptObjectHelper.ObjectFromValue<object> (val);
+						if (args[i] is ScriptObject && ((ScriptObject)args[i]).ManagedObject != null)
+							args[i] = ((ScriptObject)args[i]).ManagedObject;
 					}
 				}
 			}
@@ -796,6 +800,8 @@ namespace System.Windows.Browser {
 				else {
 					Value v = (Value)Marshal.PtrToStructure (uargs[i], typeof (Value));
 					args[i] = ScriptObjectHelper.ObjectFromValue<object> (v);
+					if (args[i] is ScriptObject && ((ScriptObject)args[i]).ManagedObject != null)
+						args[i] = ((ScriptObject)args[i]).ManagedObject;
 				}
 			}
 
